# nrp-cmd-examples

./: .gitignore  README.md  pyproject.toml
src/nrp_examples/api/: get_dataset.py  upload_dataset.py
src/nrp_examples/jupyter/: get_datasets.ipynb  upload_dataset.ipynb
